# c3

./: .gitignore  CMakeLists.txt  clone  create  merge_std.sh  merge_std2.sh  sample  test.sh  test2.sh
.devcontainer/: devcontainer.json
samples/foodstall/: 2.in
samples/kingdoms/: 1.ans  1.in  2.in  3.ans  3.in
samples/mmcmsf/: 1.ans  1.in
source/: CMakeLists.txt  cities.cpp  cities_merged.cpp  foodstall.cpp  foodstall_merged.cpp  foodstall_v1.cpp  kingdoms.cpp  kingdoms_merged.cpp  mmcmsf.cpp  mmcmsf_merged.cpp  mmcmsf_v1_slow.cpp  std.h  std_flow.h  tetris.cpp  tetris_merged.cpp
